--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,31 +1,20 @@
+/* src/components/Navbar.module.css */
 .navbar {
-    background-color: #333;
-    padding: 10px 20px;
-    position: sticky;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-  }
-  
-  .navList {
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-  }
-  
-  .navList li {
-    padding: 10px 20px;
-  }
-  
-  .navList a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s ease;
-  }
-  
-  .navList a:hover {
-    color: #FFD700;
-    text-decoration: underline;
-  }
-  
+  background-color: #333;
+  padding: 10px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.navbar li {
+  display: inline;
+  margin-right: 15px;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+}
